Revert "solucion falta de archivos"
This reverts commit 9f5ab2fba31607b1c5d1871f010557f14f34464a.

--- a/view/index.html
+++ b/view/index.html
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
   <!-- normalize -->
-  <link rel="stylesheet" type="text/css" href="./css/clima.css">
+  <link rel="stylesheet" type="text/css" href="css/normalize.css">
 
   <!-- Estilos Header -->
   <link rel="stylesheet" href="./css/header.css">
@@ -32,8 +32,6 @@
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <!-- Estilos Footer -->
   <link rel="stylesheet" href="./css/footer.css">
-  <!-- Estilo boton clima-->
-  <link rek="sylesheet" href="./css/clima.css"
 </head>
 
 <body>
@@ -59,13 +57,13 @@
   <nav>
     <div id="menu">
       <ul>
-        <li><a href="index.html">HOME</a></li>
-        <li><a href="clima.html">CLIMA</a></li>
-        <li><a href="calendarios.html">CALENDARIO</a></li>
-        <li><a href="shop.html">E-SHOP</a></li>
-        <li><a href="foro.html">FORO</a></li>
-        <li><a href="blog.html">BLOG</a></li>
-        <li><a href="contacto.html">CONTACTO</a></li>
+        <li><a href="index.html">home</a></li>
+        <li><a href="clima.html">Clima</a></li>
+        <li><a href="calendarios.html">calendario</a></li>
+        <li><a href="shop.html">e-shop</a></li>
+        <li><a href="foro.html">foro</a></li>
+        <li><a href="blog.html">blog</a></li>
+        <li><a href="contacto.html">contacto</a></li>
       </ul>
     </div>
   </nav>
@@ -135,34 +133,34 @@
     </div>
     <div class="row d-flex justify-content-between ">
       <div class="col-lg-2 text-center">
-        <img src="images/clima/temperatura.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title><img src="/images/clima/temperatura.jpg"></title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
-        <h2 class="fw-normal">Temperatura</h2>
+        <img src="images/clima/clima.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title><img src="/images/clima/clima.jpg"></title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
+        <h2 class="fw-normal">Clima</h2>
           <p>Toda la información sobre el clima y condiciónes del ambiente aquí.</p>
-          <p><a class="btn btn-secondary" href="clima-temperatura.html"><span>IR &raquo;</span></a></p>
+          <p><a class="btn btn-secondary" href="clima.html">IR &raquo;</a></p>
         </div>
         <div class="col-lg-2 text-center">
           <img src="images/clima/viento.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
-          <h2 class="fw-normal">Viento</h2>
+          <h2 class="fw-normal">Vientos</h2>
           <p>Aquí encontrarás la información necesaria sobre los vientos para planear mejor tus salidas pesqueras.</p>
-          <p><a class="btn btn-secondary" href="clima-viento.html"><span>IR &raquo;</span></a></p>
+          <p><a class="btn btn-secondary" href="clima.html">IR &raquo;</a></p>
         </div>
         <div class="col-lg-2 text-center">
           <img src="images/clima/marea.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
           <h2 class="fw-normal">Marea</h2>
           <p>Entérate como esta la condición de la marea sobre la costa.</p>
-          <p><a class="btn btn-secondary" href="clima-marea.html"><span>IR &raquo;</span></a></p>
+          <p><a class="btn btn-secondary" href="clima.html">IR &raquo;</a></p>
         </div>
         <div class="col-lg-2 text-center">
           <img src="images/clima/luna.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
           <h2 class="fw-normal">Luna</h2>
           <p>Dicen que conocer las fases lunares es una ventaja a la hora de practicar este deporte, aprende más aquí.</p>
-          <p><a class="btn btn-secondary" href="Clima-luna.html"><span>IR &raquo;</span></a></p>
+          <p><a class="btn btn-secondary" href="clima.html">IR &raquo;</a></p>
         </div>
         <div class="col-lg-2 text-center">
           <img src="images/clima/apertura-pesca.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
           <h2 class="fw-normal">Apertura Pesca</h2>
           <p>Conoce más sobre torneos, eventos pasados y futuros, y más curiosidades aquí.</p>
-          <p><a class="btn btn-secondary" href="#"><span>IR &raquo;</span></a></p>
+          <p><a class="btn btn-secondary" href="calendarios.html">IR &raquo;</a></p>
         </div>
       </div>
     </div>
@@ -173,99 +171,101 @@
     <h3 class="headline back text-white">REGISTRATE A NUESTRO NEWSLETTER</h3>
     <form class="main-form " method="post" action="./">
       <input id="email" class="width" name="email" type="text" placeholder="Introduzca su e-mail" />
-      <button type="button" class="btn btn-more btn-outline-secondary btn-lg">REGISTRARSE</button>
+      <button type="button" class="btn btn-news btn-outline-secondary btn-lg">REGISTRARSE</button>
     </form>
   </div>
 
 
   <!-- SECCIÓN E-SHOP 
 ==================================================================== -->
-  <section class="e-shop">
-    <div class="e-shop-container">
-      <!-- Texto -->
-      <div class="e-shop__text col-md-6">
-        <h2 class="e-shop__text__title">E-shop</h2>
-        <p class="e-shop__text__description">Un sitio dedicado al asesoramiento para el pescador deportivo, cañas, reeles, artificiales, accesorios. Bait Cast y Spinning. Marines Sports, Daiwa y las mejores marcas para los mas exigentes.</p>
-      </div>
 
-      <!-- slide -->
-      <div id="myCarousel" class="carousel slide slide-shop" data-bs-ride="carousel">
-        <!-- carousel -->
-        <div class="carousel-inner w-100">
-          <!-- item 1 -->
-          <div class="carousel-item carousel-item-shop  active">
-            <div class="col-7 container-card">
-              <div class="card text-bg-dark ">
-                <img src="images/shop/home/slide-1.jpg" class="card-img" alt="...">
-                <div class="card-img-overlay ">
-                  <h5 class="card-title text-center text-white text-bold">Pesca Deportiva</h5>
-                </div>
+<section class="e-shop">
+  <div class="e-shop-container">
+    <!-- Texto -->
+    <div class="e-shop__text col-md-6">
+      <h2 class="e-shop__text__title">E-shop</h2>
+      <p class="e-shop__text__description">Un sitio dedicado al asesoramiento para el pescador deportivo, cañas, reeles, artificiales, accesorios. Bait Cast y Spinning. Marines Sports, Daiwa y las mejores marcas para los mas exigentes.</p>
+    </div>
+
+    <!-- slide -->
+    <div id="myCarousel" class="carousel slide slide-shop" data-bs-ride="carousel">
+      <!-- carousel -->
+      <div class="carousel-inner w-100">
+        <!-- item 1 -->
+        <div class="carousel-item carousel-item-shop  active">
+          <div class="col-7 container-card">
+            <div class="card text-bg-dark ">
+              <img src="images/shop/home/slide-1.jpg" class="card-img" alt="...">
+              <div class="card-img-overlay ">
+                <h5 class="card-title text-center text-white text-bold">Pesca Deportiva</h5>
               </div>
             </div>
           </div>
-          <!-- /item 1 -->
-          <!-- item 2 -->
-          <div class="carousel-item carousel-item-shop ">
-            <div class="col-7  container-card">
-              <div class="card text-bg-dark text-center text-white text-bold">
-                <img src="images/shop/home/slide-2.jpg" class="card-img" alt="...">
-                <div class="card-img-overlay">
-                  <h5 class="card-title text-center text-white text-bold">Cañas</h5>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- /item 2 -->
-          <!-- item 3-->
-          <div class="carousel-item carousel-item-shop">
-            <div class="col-7  container-card">
-              <div class="card text-bg-dark">
-                <img src="images/shop/home/slide-3.jpg" class="card-img" alt="...">
-                <div class="card-img-overlay">
-                  <h5 class="card-title text-center text-white text-bold">Anzuelos</h5>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- /item 3-->
-          <!-- item 4 -->
-          <div class="carousel-item carousel-item-shop">
-            <div class="col-7  container-card">
-              <div class="card text-bg-dark">
-                <img src="images/shop/home/slide-4.jpg" class="card-img" alt="...">
-                <div class="card-img-overlay">
-                  <h5 class="card-title text-center text-white text-bold">Reeles</h5>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- /item 4 -->
-          <!-- item 5 -->
-          <div class="carousel-item  carousel-item-shop">
-            <div class="col-7  container-card">
-              <div class="card text-bg-dark">
-                <img src="images/shop/home/slide-5.jpg" class="card-img" alt="...">
-                <div class="card-img-overlay">
-                  <h5 class="card-title text-center text-white text-bold">Accesorios</h5>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- /item 5 -->
-          <!-- item 6 -->
-          <div class="carousel-item carousel-item-shop">
-            <div class="col-7  container-card">
-              <div class="card text-bg-dark">
-                <img src="images/shop/home/slide-6.jpg" class="card-img" alt="...">
-                <div class="card-img-overlay">
-                  <h5 class="card-title text-center text-white text-bold">Cajas</h5>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- item 6 -->
         </div>
-        <!-- /carousel -->
+        <!-- /item 1 -->
+        <!-- item 2 -->
+        <div class="carousel-item carousel-item-shop ">
+          <div class="col-7  container-card">
+            <div class="card text-bg-dark text-center text-white text-bold">
+              <img src="images/shop/home/slide-2.jpg" class="card-img" alt="...">
+              <div class="card-img-overlay">
+                <h5 class="card-title text-center text-white text-bold">Cañas</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- /item 2 -->
+        <!-- item 3-->
+        <div class="carousel-item carousel-item-shop">
+          <div class="col-7  container-card">
+            <div class="card text-bg-dark">
+              <img src="images/shop/home/slide-3.jpg" class="card-img" alt="...">
+              <div class="card-img-overlay">
+                <h5 class="card-title text-center text-white text-bold">Anzuelos</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- /item 3-->
+        <!-- item 4 -->
+        <div class="carousel-item carousel-item-shop">
+          <div class="col-7  container-card">
+            <div class="card text-bg-dark">
+              <img src="images/shop/home/slide-4.jpg" class="card-img" alt="...">
+              <div class="card-img-overlay">
+                <h5 class="card-title text-center text-white text-bold">Reeles</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- /item 4 -->
+        <!-- item 5 -->
+        <div class="carousel-item  carousel-item-shop">
+          <div class="col-7  container-card">
+            <div class="card text-bg-dark">
+              <img src="images/shop/home/slide-5.jpg" class="card-img" alt="...">
+              <div class="card-img-overlay">
+                <h5 class="card-title text-center text-white text-bold">Accesorios</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- /item 5 -->
+        <!-- item 6 -->
+        <div class="carousel-item carousel-item-shop">
+          <div class="col-7  container-card">
+            <div class="card text-bg-dark">
+              <img src="images/shop/home/slide-6.jpg" class="card-img" alt="...">
+              <div class="card-img-overlay">
+                <h5 class="card-title text-center text-white text-bold">Cajas</h5>
+
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- item 6 -->
+      </div>
+      <!-- /carousel -->
 
         <!-- Controls -->
         <button class="carousel-control-prev prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
