--- a/view/css/login.css
+++ b/view/css/login.css
@@ -56,7 +56,7 @@ h6 span {
 }
 
 .full-height {
-  min-height: 80vh;
+  min-height: 84vh;
 }
 
 
@@ -64,7 +64,7 @@ h6 span {
   position: relative;
   width: 440px;
   max-width: 100%;
-  height: 400px;
+  height: 350px;
   margin-top: 60px;
 }
 
@@ -254,14 +254,14 @@ h6 span {
 .logo {
   position: absolute;
   top: 20px;
-  left: 50px;
+  left: 40px;
   display: block;
   z-index: 100;
   filter: invert();
 }
 
 .logo img {
-  height: 100px;
+  height: 110px;
   width: auto;
   display: block;
 }
@@ -313,9 +313,86 @@ h6 span {
 }
 
 
-@media (max-width: 768px) {
+
+
+@media (max-width: 576px) {
+  .logo {
+    position: absolute;
+    top: 10px;
+    left: 25%;    
+    display: block;
+    z-index: 100;
+    filter: invert();
+  }
+  
+  .logo img {
+    min-height: 50px;
+    max-height: 80px;
+    width: auto;
+    display: block;
+  }
+
+  .center-wrap {
+    position: absolute;
+    width: 100%;
+    padding: 0 15px;
+    top: 50%;
+    left: 0;
+    transform: translate3d(0, -50%, 35px) perspective(100px);
+    z-index: 20;
+    display: block;
+  }
+
+  .card-3d-wrap {
+    position: relative;
+    width: 350px;
+    max-width: 100%;
+    height: 350px;
+    margin-top: 3rem;
+  }
+  
+ }
+ @media (min-width: 576px) and (max-width: 768px) {
+  .logo {
+    position: absolute;
+    top: 5px;
+    left: 30%;    
+    display: block;
+    z-index: 100;
+    filter: invert();
+  }
+  
+  .logo img {
+    min-height: 50px;
+    max-height: 100px;
+    width: auto;
+    display: block;
+  }
+
+  .center-wrap {
+    position: absolute;
+    width: 100%;
+    padding: 0 15px;
+    top: 50%;
+    left: 0;
+    transform: translate3d(0, -50%, 35px) perspective(100px);
+    z-index: 20;
+    display: block;
+  }
+
+  .card-3d-wrap {
+    position: relative;
+    top: 25px;
+    width: 350px;
+    max-width: 100%;
+    height: 350px;
+    margin-top: 3rem;
+  }
+ }
+
+ @media (max-width: 768px) {
   .waves {
     height: auto;
-    min-height: 250px;
+    min-height: 180px;
   }
 }
