agregar form y section

--- a/view/login-registro.html
+++ b/view/login-registro.html
@@ -29,7 +29,7 @@
     </a>
 
     <!-- Form -->
-    <div class="section">
+    <section class="login">
       <div class="container">
         <div class="row full-height justify-content-center">
           <div class="col-12 text-center align-self-center py-3">
@@ -38,7 +38,7 @@
                 <div class="card-3d-wrapper">
                   <div class="card-front">
                     <div class="center-wrap">
-                      <div class="section text-center">
+                      <form class="section text-center">
                         <h4 class="mb-4 pb-3">Inicio de sesion</h4>
                         <div class="form-group">
                           <input type="email" name="logemail" class="form-style" placeholder="Email" id="logemail"
@@ -54,7 +54,7 @@
                         <p class="mb-0 mt-4 text-center"><a href="./reset-password.html" class="link">¿Olvidaste tu
                             constraseña?</a></p>
                             <p class="mb-0 mt-0 text-center"><a href="./registro.html" class="link">Registrate</a></p>
-                      </div>
+                      </form>
                     </div>
                   </div>
                   </div>
@@ -64,7 +64,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
     <!--Waves Container-->
 
     <div>
@@ -74,7 +74,7 @@
           <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
         </defs>
         <g class="parallax">
-          <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7" />
+          <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7") />
           <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.5)" />
           <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)" />
           <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
