--- a/view/login-registro.html
+++ b/view/login-registro.html
@@ -24,7 +24,7 @@
 
   <div class="container-login">
     <!-- Logo -->
-    <a href="index.html" class="logo" target="_blank">
+    <a href="index.html" class="logo">
       <img src="./images/identidad/El-anzuelo-logo.png" alt="logo el anzuelo">
     </a>
 
@@ -38,19 +38,20 @@
                 <div class="card-3d-wrapper">
                   <div class="card-front">
                     <div class="center-wrap">
+
                       <form class="section text-center">
                         <h4 class="mb-4 pb-3">Inicio de sesion</h4>
-                        <div class="form-group">
-                          <input type="email" name="logemail" class="form-style" placeholder="Email" id="logemail"
-                            required>
+                        <div class="form-group has-validation">
+                          <input type="email" name="logemail" class="form-style form-check-input form-control" placeholder="Email" id="logemail"
+                           minlength="14" maxlength="30" required>
                           <i class="input-icon bi bi-person-circle"></i>
                         </div>
-                        <div class="form-group mt-2">
-                          <input type="password" name="logpass" class="form-style" placeholder="Contraseña" id="logpass"
+                        <div class="form-group mt-2 has-validation">
+                          <input type="password" name="logpass" class="form-style" placeholder="Contraseña" id="logpass" minlength="8" maxlength="12"
                             required>
                           <i class="input-icon bi bi-key"></i>
                         </div>
-                        <a href="./index.html"><button class="btn mt-4"><span>Ingresar</span></button></a>
+                        <a href="./index.html"><button class="btn mt-4" type="submit"><span>Ingresar</span></button></a>
                         <p class="mb-0 mt-4 text-center"><a href="./reset-password.html" class="link">¿Olvidaste tu
                             constraseña?</a></p>
                             <p class="mb-0 mt-0 text-center"><a href="./registro.html" class="link">Registrate</a></p>
