--- a/view/css/registro.css
+++ b/view/css/registro.css
@@ -65,7 +65,7 @@
     width: 440px;
     max-width: 100%;
     height: 400px;
-    margin-top: 60px;
+    /* margin-top: ; */
   }
   
   .card-3d-wrapper {
@@ -79,7 +79,7 @@
   .card-front{
     width: 100%;
     height: 100%;
-    padding: 1rem;;
+    padding: 1rem;
     background-color: #ffffff;
     background-image: url('../images/login-back.svg');
     background-position: bottom center;
@@ -95,7 +95,7 @@
     position: absolute;
     width: 100%;
     padding:0 35px;
-    top: 50%;
+    top: 45%;
     left: 0;
     transform: translate3d(0, -45%, 35px) perspective(100px);
     z-index: 20;
@@ -314,9 +314,85 @@
   }
   
   
-  @media (max-width: 768px) {
+  @media (max-width: 576px) {
+    .logo {
+      position: absolute;
+      top: 10px;
+      left: 25%;    
+      display: block;
+      z-index: 100;
+      filter: invert();
+    }
+    
+    .logo img {
+      min-height: 50px;
+      max-height: 100px;
+      width: auto;
+      display: block;
+    }
+  
+    .center-wrap {
+      position: absolute;
+      width: 100%;
+      padding: 0 15px;
+      top: 50%;
+      left: 0;
+      transform: translate3d(0, -50%, 35px) perspective(100px);
+      z-index: 20;
+      display: block;
+    }
+  
+    .card-3d-wrap {
+      position: relative;
+      width: 350px;
+      max-width: 100%;
+      height: 350px;
+      margin-top: 3rem;
+    }
+    
+   }
+   @media (min-width: 576px) and (max-width: 768px) {
+    .logo {
+      position: absolute;
+      top: 5px;
+      left: 30%;    
+      display: block;
+      z-index: 100;
+      filter: invert();
+    }
+    
+    .logo img {
+      min-height: 50px;
+      max-height: 100px;
+      width: auto;
+      display: block;
+    }
+  
+    .center-wrap {
+      position: absolute;
+      width: 100%;
+      padding: 0 15px;
+      top: 50%;
+      left: 0;
+      transform: translate3d(0, -50%, 35px) perspective(100px);
+      z-index: 20;
+      display: block;
+    }
+  
+    .card-3d-wrap {
+      position: relative;
+      top: 25px;
+      width: 350px;
+      max-width: 100%;
+      height: 350px;
+      margin-top: 3rem;
+    }
+   }
+  
+   @media (max-width: 768px) {
     .waves {
       height: auto;
-      min-height: 250px;
+      min-height: 180px;
     }
   }
+  
