--- a/view/css/registro.css
+++ b/view/css/registro.css
@@ -72,7 +72,7 @@
     width: 100%;
     height: 60vh;
     position: absolute;
-    top: 0;
+    top: 50px;
     left: 0;
   }
   
@@ -254,7 +254,7 @@
   
   .logo {
     position: absolute;
-    top: 20px;
+    top: 10px;
     left: 50px;
     display: block;
     z-index: 100;
@@ -262,7 +262,7 @@
   }
   
   .logo img {
-    height: 100px;
+    height: 8rem;
     width: auto;
     display: block;
   }
@@ -318,15 +318,15 @@
     .logo {
       position: absolute;
       top: 10px;
-      left: 25%;    
+      left: 10%;    
       display: block;
       z-index: 100;
       filter: invert();
     }
     
     .logo img {
-      min-height: 50px;
-      max-height: 100px;
+      min-height: 4rem;
+      max-height: 8rem;
       width: auto;
       display: block;
     }
@@ -347,7 +347,8 @@
       width: 350px;
       max-width: 100%;
       height: 350px;
-      margin-top: 3rem;
+      max-height: 400px;
+      margin-top: 1rem;
     }
     
    }
@@ -355,19 +356,12 @@
     .logo {
       position: absolute;
       top: 5px;
-      left: 30%;    
+      left: 27%;    
       display: block;
       z-index: 100;
       filter: invert();
     }
     
-    .logo img {
-      min-height: 50px;
-      max-height: 100px;
-      width: auto;
-      display: block;
-    }
-  
     .center-wrap {
       position: absolute;
       width: 100%;
@@ -381,11 +375,11 @@
   
     .card-3d-wrap {
       position: relative;
-      top: 25px;
+      top: 10px;
       width: 350px;
       max-width: 100%;
       height: 350px;
-      margin-top: 3rem;
+      margin-top: 1rem;
     }
    }
   
