agregar section , form y validaciones minimas

--- a/view/login-registro.html
+++ b/view/login-registro.html
@@ -21,19 +21,19 @@
 </head>
 
 <body>
-
-  <div class="container-login">
-    <!-- Logo -->
+  <header>
+     <!-- Logo -->
     <a href="index.html" class="logo">
       <img src="./images/identidad/El-anzuelo-logo.png" alt="logo el anzuelo">
     </a>
-
+  </header>
+  <div class="container-login">
     <!-- Form -->
     <section class="login">
       <div class="container">
         <div class="row full-height justify-content-center">
           <div class="col-12 text-center align-self-center py-3">
-            <div class="section pb-5 pt-5 pt-sm-2 text-center">           
+            <div class="section pb-5 pt-5 pt-sm-2 text-center">
               <div class="card-3d-wrap mx-auto">
                 <div class="card-3d-wrapper">
                   <div class="card-front">
@@ -42,22 +42,21 @@
                       <form class="section text-center">
                         <h4 class="mb-4 pb-3">Inicio de sesion</h4>
                         <div class="form-group has-validation">
-                          <input type="email" name="logemail" class="form-style form-check-input form-control" placeholder="Email" id="logemail"
-                           minlength="14" maxlength="30" required>
+                          <input type="email" name="logemail" class="form-style form-check-input form-control"
+                            placeholder="Email" id="logemail" minlength="14" maxlength="30" required>
                           <i class="input-icon bi bi-person-circle"></i>
                         </div>
                         <div class="form-group mt-2 has-validation">
-                          <input type="password" name="logpass" class="form-style" placeholder="Contraseña" id="logpass" minlength="8" maxlength="12"
-                            required>
+                          <input type="password" name="logpass" class="form-style" placeholder="Contraseña" id="logpass"
+                            minlength="8" maxlength="12" required>
                           <i class="input-icon bi bi-key"></i>
                         </div>
                         <a href="./index.html"><button class="btn mt-4" type="submit"><span>Ingresar</span></button></a>
                         <p class="mb-0 mt-4 text-center"><a href="./reset-password.html" class="link">¿Olvidaste tu
                             constraseña?</a></p>
-                            <p class="mb-0 mt-0 text-center"><a href="./registro.html" class="link">Registrate</a></p>
+                        <p class="mb-0 mt-0 text-center"><a href="./registro.html" class="link">Registrate</a></p>
                       </form>
                     </div>
-                  </div>
                   </div>
                 </div>
               </div>
@@ -65,25 +64,26 @@
           </div>
         </div>
       </div>
-    </section>
-    <!--Waves Container-->
+  </div>
+  </section>
+  <!--Waves Container-->
 
-    <div>
-      <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-        viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
-        <defs>
-          <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
-        </defs>
-        <g class="parallax">
-          <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7") />
-          <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.5)" />
-          <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)" />
-          <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
-        </g>
-      </svg>
-    </div>
+  <div>
+    <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+      viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
+      <defs>
+        <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
+      </defs>
+      <g class="parallax">
+        <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7" ) />
+        <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.5)" />
+        <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)" />
+        <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
+      </g>
+    </svg>
+  </div>
 
-    <!--Waves end-->
+  <!--Waves end-->
   </div>
   <!--Login ends-->
 
