--- a/view/contacto.html
+++ b/view/contacto.html
@@ -30,6 +30,8 @@
   <link rel="stylesheet" href="./css/header.css">
   <!-- Estilos  -->
   <link rel="stylesheet" type="text/css" href="css/styles.css">
+   <!-- Estilos contacto -->
+   <link rel="stylesheet" href="./css/contacto.css">
   <!-- Estilos Footer -->
   <link rel="stylesheet" href="./css/footer.css">
 </head>
@@ -69,64 +71,40 @@
   </nav>
   </header>
 
-  <p>
-  <div class="container">
-    <div class="row ml-5">
-      <div class="col-md-12 ml-5 ">
-        <div class="well well-sm">
-          <form class="form-horizontal" method="post">
-            <fieldset>
-              <legend class="text-center header">ESCRIBINOS</legend>
+  <!-- Formulario -->
 
-              <div class="form-group">
-                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
-                <div class="col-md-8">
-                  <input id="fname" name="name" type="text" placeholder="First Name" class="form-control">
-                </div>
-              </div>
-              <div class="form-group">
-                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
-                <div class="col-md-8">
-                  <input id="lname" name="name" type="text" placeholder="Last Name" class="form-control">
-                </div>
-              </div>
-
-              <div class="form-group">
-                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
-                <div class="col-md-8">
-                  <input id="email" name="email" type="text" placeholder="Email Address" class="form-control">
-                </div>
-              </div>
-
-              <div class="form-group">
-                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-phone-square bigicon"></i></span>
-                <div class="col-md-8">
-                  <input id="phone" name="phone" type="text" placeholder="Phone" class="form-control">
-                </div>
-              </div>
-
-              <div class="form-group">
-                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-pencil-square-o bigicon"></i></span>
-                <div class="col-md-8">
-                  <textarea class="form-control" id="message" name="message"
-                    placeholder="Enter your massage for us here. We will get back to you within 2 business days."
-                    rows="7"></textarea>
-                </div>
-              </div>
-
-              <div class="form-group">
-                <div class="col-md-12 text-center">
-                  <button type="submit" class="btn btn-primary btn-lg">Submit</button>
-                </div>
-              </div>
-            </fieldset>
-          </form>
-        </div>
-      </div>
+  <section class="contacto" id="contacto" >
+    <div class="contenedor-absoluto">      
     </div>
-  </div>
-  </p>
-  </footer>
+    <div class="titulo-contactos">
+        <h3>ESCRIBINOS</h3>
+    </div>
+    <p class="parrafo-contacto">
+            Complete el siguiente formulario y nos pondremos en contacto lo mas pronto posible.
+    </p>
+    <div class="mensaje-exitoso">       
+    </div>
+    <div class="errores">
+    </div>
+    <div class="formulario-contenedor">
+
+
+       <form id="form"  action="https://formspree.io/f/xjvzpqbp" method="POST">
+        <label>  
+    
+            <input type="text" name="nombre" placeholder="Nombre" class="input-nombre inputs" required>
+            <input type="text" name="email" placeholder="Email" class="input-email inputs" required>
+            <input type="tel" name="Telefono" placeholder="Telefono" class="input-telefono inputs" required>
+            <textarea name="message" placeholder="Mensaje" class="area inputs"></textarea required>
+
+              <button class= "btn" type="submit"></button>
+       
+        </label>
+
+      </form>
+
+</section> 
+  
   <footer>
     <div class="container__footer">
       <div class="box__footer">
@@ -173,10 +151,11 @@
   </footer>
 
 
-
-
   <!--Bootstrap-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
+
+    <script src="/view/JavaScript/formulario-contacto.js"></script>
+    <script src = " https://unpkg.com/sweetalert/dist/sweetalert.min.js "></script>
 </body>
