--- a/view/css/styles.css
+++ b/view/css/styles.css
@@ -12,9 +12,22 @@
 
   }
 /* Sección clima y calendarios  */
-    /* Aquí los cambios de los botones */
-   
-/* ==================== */
+    /*Reemplazo de clase de button a "btn-more" para heredar estilo*/
+    body {
+        padding-top: 3rem;
+        padding-bottom: 3rem;
+        color: #5a5a5a;
+        align-items: center ;
+      }
+      .clima .col-lg-2 {
+        margin-bottom: 1.5rem;
+        text-align: center;
+      }
+      .clima .col-lg-2 p {
+        margin-right: .75rem;
+        margin-left: .75rem;
+      }
+      
 /* btn-news */
 /* cambios en el botón */
 /* .btn-news {
