Ahora si, completo

--- a/view/Clima-luna.html
+++ b/view/Clima-luna.html
@@ -166,7 +166,7 @@
                 Calendario Lunar
             </a>   
         </p>
-        <div class="collapse" id="collapseLuna">
+        <div class="collapse show" id="collapseLuna">
             <div class="card card-body">
                 <section>
                     <p>Información de las fases lunares del mes</p>
