--- a/view/clima-marea.html
+++ b/view/clima-marea.html
@@ -145,7 +145,7 @@
                 Marea
             </a>    
         </p>
-        <div class="collapse" id="collapseMarea">
+        <div class="collapse show" id="collapseMarea">
             <div class="card card-body">
                 <section>
                     <p>
