--- a/view/clima-viento.html
+++ b/view/clima-viento.html
@@ -121,7 +121,7 @@
                 Viento
             </a>    
         </p>
-        <div class="collapse" id="collapseViento">
+        <div class="collapse show" id="collapseViento">
             <div class="card card-body">
                 <section style="background-color: #aaaabb">
                     <p>Haz click en la imagen para acceder al "Mapa de vientos" y a Windguru</p>
