--- a/view/index.html
+++ b/view/index.html
@@ -33,7 +33,6 @@
   <!-- Estilos Footer -->
   <link rel="stylesheet" href="./css/footer.css">
   <!-- Estilo boton clima-->
-  <link rek="sylesheet" href="./css/clima.css"
 </head>
 
 <body>
@@ -138,31 +137,31 @@
         <img src="images/clima/temperatura.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title><img src="/images/clima/temperatura.jpg"></title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
         <h2 class="fw-normal">Temperatura</h2>
           <p>Toda la información sobre el clima y condiciónes del ambiente aquí.</p>
-          <p><a class="btn btn-secondary" href="clima-temperatura.html"><span>IR &raquo;</span></a></p>
+          <p><a class="btn-more" href="clima-temperatura.html"><span>IR &raquo;</span></a></p>
         </div>
         <div class="col-lg-2 text-center">
           <img src="images/clima/viento.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
           <h2 class="fw-normal">Viento</h2>
           <p>Aquí encontrarás la información necesaria sobre los vientos para planear mejor tus salidas pesqueras.</p>
-          <p><a class="btn btn-secondary" href="clima-viento.html"><span>IR &raquo;</span></a></p>
+          <p><a class="btn-more" href="clima-viento.html"><span>IR &raquo;</span></a></p>
         </div>
         <div class="col-lg-2 text-center">
           <img src="images/clima/marea.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
           <h2 class="fw-normal">Marea</h2>
           <p>Entérate como esta la condición de la marea sobre la costa.</p>
-          <p><a class="btn btn-secondary" href="clima-marea.html"><span>IR &raquo;</span></a></p>
+          <p><a class="btn-more" href="clima-marea.html"><span>IR &raquo;</span></a></p>
         </div>
         <div class="col-lg-2 text-center">
           <img src="images/clima/luna.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
           <h2 class="fw-normal">Luna</h2>
           <p>Dicen que conocer las fases lunares es una ventaja a la hora de practicar este deporte, aprende más aquí.</p>
-          <p><a class="btn btn-secondary" href="Clima-luna.html"><span>IR &raquo;</span></a></p>
+          <p><a class="btn-more" href="Clima-luna.html"><span>IR &raquo;</span></a></p>
         </div>
         <div class="col-lg-2 text-center">
           <img src="images/clima/apertura-pesca.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
           <h2 class="fw-normal">Apertura Pesca</h2>
           <p>Conoce más sobre torneos, eventos pasados y futuros, y más curiosidades aquí.</p>
-          <p><a class="btn btn-secondary" href="#"><span>IR &raquo;</span></a></p>
+          <p><a class="btn-more" href="#"><span>IR &raquo;</span></a></p>
         </div>
       </div>
     </div>
