--- a/view/clima-temperatura.html
+++ b/view/clima-temperatura.html
@@ -83,31 +83,31 @@
                 Temperatura
             </a>    
         </p>
-        <div class="collapse" id="collapseTemperatura">
+        <div class="collapse show" id="collapseTemperatura">
             <div class="card card-body">
                 <div id="TTPW_gsYL">El tiempo - Tutiempo.net</div>
-            <script type="text/javascript">
-            function IniciarCargaTiempoIP()
-            {
-            var ScriptOriginal = "https://www.tutiempo.net/s-widget/pw/fgsYL/C10/";
-            var xhttp = new XMLHttpRequest();
-                xhttp.onreadystatechange = function()
+                <script type="text/javascript">
+                function IniciarCargaTiempoIP()
                 {
-                    if(this.readyState == 4 && this.status == 200)
+                var ScriptOriginal = "https://www.tutiempo.net/s-widget/pw/fgsYL/C10/";
+                var xhttp = new XMLHttpRequest();
+                    xhttp.onreadystatechange = function()
                     {
-                    var data = JSON.parse(this.responseText);
-                    var res = data.loc.split(",");
-                    var imported = document.createElement('script');
-                    if(res[0] && res[1]){imported.src = ScriptOriginal+res[0]+','+res[1];}
-                    else{imported.src = ScriptOriginal;}
-                    document.head.appendChild(imported);
-                    }
-                };
-            xhttp.open("GET","https://ipinfo.io/json",true);
-            xhttp.send();
-            }
-            IniciarCargaTiempoIP();
-            </script>
+                        if(this.readyState == 4 && this.status == 200)
+                        {
+                        var data = JSON.parse(this.responseText);
+                        var res = data.loc.split(",");
+                        var imported = document.createElement('script');
+                        if(res[0] && res[1]){imported.src = ScriptOriginal+res[0]+','+res[1];}
+                        else{imported.src = ScriptOriginal;}
+                        document.head.appendChild(imported);
+                        }
+                    };
+                xhttp.open("GET","https://ipinfo.io/json",true);
+                xhttp.send();
+                }
+                IniciarCargaTiempoIP();
+                </script>
             </div>
             <iframe class="mapa-climatico" style="width: 100%; height: 500px;" src="https://mapa.tutiempo.net/#-37.19533;-60.83679;7">
                 MAPAClima
